infrastructure/roles/cartostage/frontend/files/deployment.yaml
# frontend/k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: csfront
  labels:
    name: csfront

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: csfront
  labels:
    app: frontend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3000' 
    prometheus.io/path: '/metrics'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
      - name: frontend
        image: mysternathan.freeboxos.fr/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: csfront
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress
  namespace: csfront
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`mysternathan.freeboxos.fr`) && PathPrefix(`/cartostage`)
    kind: Rule
    services:
    - name: frontend-service
      port: 80
  tls:
    certResolver: letsencrypt
---
